--- a/Cartoons/Storyboards/Main.storyboard
+++ b/Cartoons/Storyboards/Main.storyboard
@@ -139,6 +139,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="lAf-9x-BVk">
                             <size key="itemSize" width="100" height="100"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -171,23 +172,21 @@
                                 <size key="customSize" width="100" height="100"/>
                                 <connections>
                                     <outlet property="characterImage" destination="e5H-4x-vsI" id="hNl-Vq-Ps9"/>
-                                    <outletCollection property="gestureRecognizers" destination="qWo-cf-OAr" appends="YES" id="sW7-Wb-cj5"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
                             <outlet property="dataSource" destination="D6a-ps-qmw" id="AgH-oO-AFb"/>
                             <outlet property="delegate" destination="D6a-ps-qmw" id="9Qj-rc-NGE"/>
+                            <outletCollection property="gestureRecognizers" destination="Fla-w5-jDi" appends="YES" id="v2R-sI-O2k"/>
                         </connections>
                     </collectionView>
-                    <connections>
-                        <outlet property="lpgr" destination="qWo-cf-OAr" id="Xqv-3w-dXy"/>
-                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W2H-I5-6MU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="qWo-cf-OAr">
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="Fla-w5-jDi">
                     <connections>
-                        <outlet property="delegate" destination="D6a-ps-qmw" id="k5k-2M-wWa"/>
+                        <action selector="handleLongPressAction:" destination="D6a-ps-qmw" id="vLE-7d-gFF"/>
+                        <outlet property="delegate" destination="D6a-ps-qmw" id="2ST-uY-ZuS"/>
                     </connections>
                 </pongPressGestureRecognizer>
             </objects>
